# mathcomp-qbs

./: .gitignore  AUDIT_REPORT.md  README.md  REPORT.md  _CoqProject  coq-qbs.opam  rocq_mcp_cache_105798_.v  rocq_mcp_cache_163171_.v  rocq_mcp_cache_163180_.v
.github/workflows/: blueprint.yml
blueprint/src/: content.tex  print.tex  web.tex
theories/: bayesian_regression.v  coproduct_qbs.v  expr_strong_meas.v  measurable_normal_prob_sigma.v  measurable_prob.v  measure_as_qbs_measure.v  measure_qbs_adjunction.v  monadP_analysis.v  normal_algebra.v  pair_qbs_measure.v  ppl_coincidence.v  ppl_fo_semantics.v  ppl_kernel.v  ppl_qbs.v  ppl_quot_semantics.v  probability_qbs.v  qbs_bind_kernel.v  qbs_fubini.v  qbs_giry.v  qbs_kernel.v  qbs_kernel_bridge.v  qbs_prob_quot.v  qbs_quot_bind.v  qbs_quotient.v  qbs_strong_kernel.v  qps_bind_exists_std_borel.v  qps_bind_wd_proof.v  quasi_borel.v  standard_borel.v
theories/showcase/: bayesian_regression.v  ppl_examples.v
